<resources>
    <string name="empty_field_toast">Please insert all of the field</string>
    <!--Login-->
    <string name="app_name">SplitWallet</string>
    <string name="username_email" translatable="false">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registerHyperlink">Haven\'t make an account? Sign Up</string>
    <string name="success_login_toast">Successfully Login</string>
    <string name="signUpWithGoogle">Or sign in with social account</string>
    <string name="signOut">Sign out</string>
    <!--Register-->
    <string name="username" translatable="false">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="register">Register</string>
    <string name="success_register_toast">Successfully Register</string>
    <string name="title_activity_register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="wrong_confirm_password">Password and Confirm password must same</string>
    <string name="wrong_validation_password">Password length mush be 6 or more character and Alphanumeric</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_below_6">Password length must be 6 or more character</string>
    <string name="alphanumeric_password">Password must be alphanumeric</string>

    <!--Login & Register-->
    <string name="username_invalid">Invalid Username</string>
    <string name="wrong_credential">Wrong Credential</string>

    <string name="email_exists">"Email already exists!"</string>
    <string name="username_exists">"Username already exists!"</string>
    <string name="welcome">Welcome </string>
    <string name="back_to_exit">Press Back again to Exit.</string>
    <string name="failed_sign_in">Sign In Failed</string>
    <string name="acc_failed">Account Failed</string>
    <string name="sign_in_success">Sign In Success</string>
    <string name="register_email_first">Please register your email first</string>
    <string name="wallet_available">Wallet name is exists!</string>
    <string name="wallet_empty">Wallet name can\'t be empty</string>
    <string name="input_wallet_type">You have to choose the wallet type!</string>
    <string name="limit_greater">Limit must be greater than 0</string>
    <string name="update_wallet_success">Successfully updated the wallet!</string>

    <string name="amount_empty">Transaction amount must be filled</string>
    <string name="note_empty">Transaction note must be filled</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register_user" translatable="false">RegisterUserActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!--   Menu item -->
    <string name="icon_calendar">Calendar</string>
    <string name="icon_home">Home</string>
    <string name="icon_wallet">Wallet</string>
    <string name="icon_transaction">Transaction</string>
    <string name="icon_report">Report</string>

    <!--  User Account page   -->
    <string name="user_account_name" translatable="false">Adrian</string>
    <string name="user_account_email" translatable="false">tpafgdx@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_wallet">Create Wallet</string>

    <!--    Wallet-->
    <string name="add_wallet">Add</string>

    <!--    Setting-->
    <string name="notification">Notification</string>
    <string name="theme">Theme</string>
    <string name="back_menu">Back to Home</string>

    <!--    TransactionDetail-->
    <string name="intro_transaction">Here is your detail transactions!</string>
    <string name="totalSpent">Total Spent</string>
    <string name="limit">Limit</string>
    <string name="amount">Amount</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_wallet_success">Successfully removed this wallet!</string>

    <!--    Report-->
    <string name="from">From : </string>
    <string name="to">To : </string>
    <string name="check">Check</string>
    <string name="export">Export to Excel</string>

    <string name="no_income">No Income Available</string>
    <string name="no_expense">No Expense Available</string>
    <string name="please_choose">Choose the wallet</string>

    <!--    TransactionFragment-->
    <string name="transaction">Transaction</string>
    <string name="select_date">Select Date</string>

    <!--    Create Wallet-->
    <string name="wallet_type">Wallet Type</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="wallet_limit">Wallet Limit</string>

    <string name="update">Update</string>

    <!--    Update Wallet-->
    <string name="edit_wallet">Update Wallet</string>
    <string name="cashFlow">Cash Flow</string>

    <!--    Update Transaction -->
    <string name="edit_transaction">Update Transaction</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_note">Transaction Note</string>

    <string name="no_transactions">No transaction added!\n\nPlease add first!</string>
    <string name="no_wallets">No wallet added!\n\nPlease add first!</string>
    <string name="no_choose">You have to choose the wallet!</string>
    <string name="add_transaction_success">Successfully added a new transaction!</string>

    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>

    <string name="select_wallet">Select Your Wallet</string>
    <string name="add_transaction">Add New Transaction</string>

    <string name="edit">Edit</string>
    <string name="remove">Remove</string>

    <string name="choose_wallet">Please Choose</string>
    <string name="date_invalid">Date Invalid</string>
    <string name="required">Required</string>
    <string name="permission_denied">Permission Denied!</string>

    <string name="success_save">Successfully save to </string>
    <string name="wallet_success">Success create new wallet!</string>

    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>


    <string name="all">All</string>
    <string name="status_exceeded">Status: Exceeded</string>
    <string name="status_near_limit">Status: Near Limit</string>

</resources>