<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.bluejack20_1.splitwallet.CreateWalletActivity"
    android:background="?attr/backgroundColor">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="75dp"
           android:background="?attr/blueBaseColor"
           >

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/create_wallet"
               android:layout_gravity="center"
               android:layout_marginStart="10dp"
               android:textSize="20sp"
               android:textColor="?attr/textColor"
               android:textStyle="bold"
               />

       </LinearLayout>

       <ImageView
           android:layout_width="75dp"
           android:layout_height="75dp"
           android:layout_gravity="center"
           android:layout_marginTop="50dp"
           android:src="@drawable/icon_mobile_wallet"
           />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="20dp"
           android:orientation="vertical"
           >

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/wallet_name"
               app:errorEnabled="true"
               android:id="@+id/wallet_name_layout"
               android:layout_marginBottom="10dp"
               >

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/wallet_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingLeft="15dp"
                   android:paddingRight="15dp"
                   android:paddingBottom="20dp"
                   android:paddingTop="25dp"
                   android:drawablePadding="10dp"
                   android:layout_marginVertical="5dp"

                   android:drawableStart="@drawable/ic_baseline_account_balance_wallet_24"
                   />

           </com.google.android.material.textfield.TextInputLayout>


           <com.google.android.material.textfield.TextInputLayout
               android:hint="@string/wallet_type"
               android:layout_marginBottom="20dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:helperTextEnabled="true"
               style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
               >

               <AutoCompleteTextView
                   android:id="@+id/autoComplete"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="none"
                   android:paddingLeft="15dp"
                   android:paddingRight="15dp"
                   android:paddingBottom="20dp"
                   android:paddingTop="25dp"
                   android:layout_marginVertical="5dp"
                   />


           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/wallet_limit"
               app:prefixText="Rp. "
               app:errorEnabled="true"
               android:paddingBottom="10dp"
               android:layout_marginBottom="10dp"
              >

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/wallet_limit"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingLeft="15dp"
                   android:paddingRight="15dp"
                   android:paddingBottom="20dp"
                   android:paddingTop="25dp"
                   android:drawableLeft="@drawable/email_logo"
                   android:drawablePadding="10dp"
                   android:layout_marginVertical="5dp"
                   android:inputType="number"
                   android:drawableStart="@drawable/ic_baseline_attach_money_24"
                   />

           </com.google.android.material.textfield.TextInputLayout>

           <Button
               android:id="@+id/btn_add"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/add_wallet"
               android:onClick="addWallet"
               android:background="@drawable/login_round_button"
               />


       </LinearLayout>

   </LinearLayout>


</ScrollView>