<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="50dp"
            ></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginLogo"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_email"
                android:id="@+id/usernameLogin"
                android:layout_marginVertical="5dp"
                android:padding="15dp"
                android:textColor="@color/fontColor"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/username_logo"
                />

            <!--        <EditText-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:hint="@string/username_email"-->
            <!--            android:id="@+id/usernameLogin"-->
            <!--            android:layout_marginVertical="5dp"-->
            <!--            android:padding="15dp"-->
            <!--            android:textColor="@color/fontColor"/>-->

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/passwordLogin"
                android:padding="15dp"
                android:drawableLeft="@drawable/password_logo"
                android:drawablePadding="10dp"
                android:layout_marginVertical="5dp"
                android:inputType="textPassword"
                android:textColor="@color/fontColor"/>

            <!--        <EditText-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:hint="@string/password"-->
            <!--            android:id="@+id/passwordLogin"-->
            <!--            android:padding="10dp"-->
            <!--            android:layout_marginVertical="5dp"-->
            <!--            android:inputType="textPassword"-->
            <!--            android:textColor="@color/fontColor"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/registerHyperlink"
                android:layout_gravity="center"
                android:id="@+id/registerHyperlink"
                android:textColor="@color/hyperlinkColor"
                android:layout_marginVertical="5dp"/>
            <com.google.android.gms.common.SignInButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:id="@+id/sign_in_button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:text="@string/login"
                android:id="@+id/loginButton"
                android:background="@drawable/login_round_button"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="10dp"/>


        </LinearLayout>






    </RelativeLayout>








</ScrollView>