<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorGray200"
    tools:context=".fragments.AccountFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@color/colorPrimary"
        >
    </View>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-175dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:layout_height="155dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorGray50"
            >

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:hint="@string/user_account_name"
                android:gravity="center"
                android:textSize="25sp"
                android:textColorHint="@color/colorBlack"
                />

            <TextView
                android:layout_below="@+id/user_name"
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_account_email"
                android:gravity="center"
                android:textSize="15sp"
                />

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/display_picture"
            android:layout_gravity="center"
            />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:orientation="vertical"
        android:background="@color/colorGray50"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_account_balance_wallet_24"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_wallet"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorBlack"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cardElevation="2dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/fontReverseColor"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_profile"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorBlack"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cardElevation="2dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/fontReverseColor"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_settings_24"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorBlack"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>