<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context="edu.bluejack20_1.splitwallet.UpdateTransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/colorPrimary"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_transaction"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textColor="@color/fontReverseColor"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/icon_mobile_wallet"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_amount"
                app:errorEnabled="true"
                app:prefixText="Rp. "
                android:layout_marginBottom="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="20dp"
                    android:paddingTop="25dp"
                    android:inputType="number"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_baseline_attach_money_24"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_note"
                app:errorEnabled="true"
                android:layout_marginBottom="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="20dp"
                    android:paddingTop="25dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_baseline_event_note_24"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/fontReverseColor"
                android:backgroundTint = "@color/colorPrimary"
                android:text="@string/edit_transaction"
                android:onClick="addWallet"
                />

        </LinearLayout>


    </LinearLayout>

</ScrollView>